--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span>Ashish Kumar</span>
+                <span id="nav-name">Ashish Kumar</span>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
@@ -117,13 +117,13 @@
                         </a>
                     </div>
                     <div class="hero-social">
-                        <a href="https://www.linkedin.com/in/ashishk123/" target="_blank" class="social-link">
+                        <a href="#" target="_blank" class="social-link linkedin-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://github.com/ashishk123" target="_blank" class="social-link">
+                        <a href="#" target="_blank" class="social-link github-link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="mailto:ashish@example.com" class="social-link">
+                        <a href="#" class="social-link email-link">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -158,32 +158,29 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a dedicated Data Analyst with expertise in transforming complex datasets into meaningful business insights. 
-                        With a strong foundation in statistical analysis, data visualization, and business intelligence tools, 
-                        I help organizations make data-driven decisions that drive growth and efficiency.
+                        Loading about content...
                     </p>
                     <p>
-                        My experience spans across various industries, where I've successfully implemented analytics solutions, 
-                        created interactive dashboards, and presented findings to stakeholders at all levels.
+                        Loading about content...
                     </p>
                     <div class="about-stats">
                         <div class="stat-item">
-                            <span class="stat-number">3+</span>
-                            <span class="stat-label">Years Experience</span>
+                            <span class="stat-number">0</span>
+                            <span class="stat-label">Loading...</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">50+</span>
-                            <span class="stat-label">Projects Completed</span>
+                            <span class="stat-number">0</span>
+                            <span class="stat-label">Loading...</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">10+</span>
-                            <span class="stat-label">Tools Mastered</span>
+                            <span class="stat-number">0</span>
+                            <span class="stat-label">Loading...</span>
                         </div>
                     </div>
                 </div>
                 <div class="about-image">
                     <div class="image-wrapper">
-                        <img src="https://via.placeholder.com/400x500/4f46e5/ffffff?text=Your+Photo" alt="Ashish Kumar" />
+                        <img src="./profile-photo.jpeg" alt="Ashish Kumar" />
                     </div>
                 </div>
             </div>
@@ -198,57 +195,7 @@
                 <p class="section-subtitle">My professional journey</p>
             </div>
             <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Senior Data Analyst</h3>
-                        <h4>Tech Company</h4>
-                        <span class="timeline-date">2023 - Present</span>
-                        <p>
-                            Leading data analysis initiatives for business intelligence and strategic planning. 
-                            Developed automated reporting systems that reduced manual work by 70%.
-                        </p>
-                        <ul>
-                            <li>Created executive dashboards using Power BI and Tableau</li>
-                            <li>Implemented predictive models for customer behavior analysis</li>
-                            <li>Led cross-functional teams to drive data-driven decision making</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Data Analyst</h3>
-                        <h4>Previous Company</h4>
-                        <span class="timeline-date">2021 - 2023</span>
-                        <p>
-                            Analyzed customer data to identify trends and opportunities for business growth. 
-                            Collaborated with marketing and sales teams to optimize campaigns.
-                        </p>
-                        <ul>
-                            <li>Performed statistical analysis on large datasets</li>
-                            <li>Created data visualizations for stakeholder presentations</li>
-                            <li>Improved data quality processes and documentation</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Junior Data Analyst</h3>
-                        <h4>First Company</h4>
-                        <span class="timeline-date">2020 - 2021</span>
-                        <p>
-                            Started my analytics journey by supporting senior analysts with data collection, 
-                            cleaning, and basic analysis tasks.
-                        </p>
-                        <ul>
-                            <li>Learned SQL, Python, and Excel for data analysis</li>
-                            <li>Assisted in creating monthly and quarterly reports</li>
-                            <li>Developed strong foundation in data visualization tools</li>
-                        </ul>
-                    </div>
-                </div>
+                <!-- Experience items will be populated dynamically from data.js -->
             </div>
         </div>
     </section>
